<resources>
    <string name="app_name">MovieQuoteV2</string>
    <string name="start_game">Start</string>
    <string name="dodgeball_q1">It’s a bold strategy, Cotton. Let’s see if it pays off for ‘em.</string>
    <string name="movie_1">Dodgeball</string>
    <string name="movie_2">Accepted</string>
    <string name="movie_3">Superbad</string>
    <string name="movie_4">The Other Guys</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="movie_5">Zoolander</string>
    <string name="movie_6">Step Brothers</string>
    <string name="movie_7">Hot Tub Time Machine</string>
    <string name="movie_8">Elf</string>
    <string name="movie_9">The Interview</string>
    <string name="movie_10">The Internship</string>
    <string-array name="movies_array">
        <item>Dodgeball</item>
        <item>Superbad</item>

    </string-array>
</resources>
