<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="332dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/dodgeball_q1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:onClick="movie1Button"
        android:text="@string/movie_1"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:onClick="movie2Button"
        android:text="@string/movie_2"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="40dp"
        android:onClick="movie3Button"
        android:text="@string/movie_3"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:onClick="movie4Button"
        android:text="@string/movie_4"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="13dp" />
</androidx.constraintlayout.widget.ConstraintLayout>